--- a/public/css/config.json
+++ b/public/css/config.json
@@ -30,7 +30,7 @@
     }
   },
   "configurationArguments": {
-    "applicationExtensionKey": "e2a8886e-4812-43db-a91f-96b4bdfee8cf",
+    "applicationExtensionKey": "",
     "save": {
       "url": "https://pushuniasselve.herokuapp.com/journeybuilder/save",
       "verb": "POST",
